# rust_object_store_demo

./: Cargo.toml  README.md
src/: main.rs
